--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -138,3 +138,5 @@ Added persian (farsi) language file (user contribution) - 22 March 2005, GauGau
 Changed file headers and version numbers from cpg1.3.2 to cpg1.3.3 - 19 April 2005, GauGau
 Fixed omission about privacy settings in french language file - 04 July 2005, GauGau
 Fixed typos in finnish language file - 05 July 2005, GauGau
+Added Galician language support (user contribution) - 12 August 2005, GauGau
+Fixed XSS vulnerability for EXIF data in displayimage.php
