Fix the obscure, misdocumented "feature" in Apache that causes the server to process the last "valid" extension in the filename (rar exploit): replace all dots in the filename except the last one with an underscore
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3029 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -360,3 +360,4 @@ Changed coppermine version from cpg1.4.5 to cpg1.4.6 - 09th May 2006, GauGau
 Fixed admin recognition issue in IPB bridge - 10th May 2006, Nibbler
 Fixed missing translation in batch-add - 13th May 2006, GauGau
 Fixed visibility issue for clickable options in fruity theme - 13th May 2006, GauGau
+Fix the obscure, misdocumented "feature" in Apache that causes the server to process the last "valid" extension in the filename (rar exploit): replace all dots in the filename except the last one with an underscore - 17th May 2006, GauGau
