Removing SQL injection vulnerability
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3323 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-10-28 [S] Removing SQL injection vulnerability {Nibbler}
 2006-10-27 [M] Removing unused file include/exifReader.inc.php {Nibbler}
 2006-10-27 [B] Adding missing checks for email address validity and duplicate email addresses to profile page. {Nibbler}
 2006-10-27 [B] Correcting difference between schema.sql and update.sql with respect to the user_password field. {Nibbler}
