--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,7 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
-2007-09-05 [S] If 'http' or 'script' is set in referer then referer will be set to 'index.php' {Amit}
+2007-09-05 [S] Added code to remove risky characters in log file name in URL and to check if given log file name's directory is current directory or not to fix second vulnerability posted at http://coppermine-gallery.net/forum/index.php?topic=46623 {Amit}
+2007-09-05 [S] If 'http' or 'script' is set in referer then referer will be set to 'index.php' - first vulnerability posted at http://coppermine-gallery.net/forum/index.php?topic=46623  {Amit}
 2007-09-04 [A] Added preliminary (beta) bridge for SMF 2.x (user contribution) {GauGau}
 2007-09-01 [B] Fixed the bugs introduced because of moderator mod and editpics changes {Abbas}
 2007-08-25 [C] Removed config option "Display album description" that hasn't been implemented yet {GauGau}
