Removed html_entity_decode causing potential XSS vulnerability as discussed in topic 47390
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4012 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-10-31 [S] Removed html_entity_decode causing potential XSS vulnerability as discussed in http://coppermine-gallery.net/forum/index.php?topic=47390.0 {Aditya}
 2007-10-19 [O] Replaced hard-coded language in util.php with translation strings {Frantz}
 2007-10-17 [A] Added plugin "Visible HookPoints" to package {GauGau}
 2007-10-17 [A] Added feature "delete files older than XXX days" {Frantz}
