--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-04-10 [S] Corrected an SQL injection vulnerability in URI upload code {Nibbler}
 2008-04-07 [O] Added expandable admin tools sections {GauGau}
 2008-03-25 [A] Added warning on the config page for settings that mustn't be changed lightheartedly {GauGau}
 2008-03-25 [A] Added favicon tag to all themes that come with coppermine {GauGau}
