- Fixed the remode code execution security issue in user_get_profile and language file selection
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4753 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-08-01 [S] Fixed a security issue reported at http://www.milw0rm.com/exploits/6178 {Abbas}
 2008-07-25 [B] SMF anonymous user fix {Nibbler}
 2008-06-11 [D] Added Spanish documentation (user contribution) {GauGau}
 2008-05-21 [B] Replaced hard-coded string "edit keywords" with translation (thread ID 52721) {GauGau}
